// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bokmål render 1`] = `
<div>
  <div
    data-testid="factbox"
    style="margin-bottom: 10px;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
    >
      <div
        aria-controls="tmp_nb-content"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
        id="tmp_nb-header"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          Dette er en tittel
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            color="#033F85"
            fill="currentColor"
            font-size="large"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(3, 63, 133);"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              aria-labelledby="tmp_nb-header"
              class="MuiAccordion-region"
              id="tmp_nb-content"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
              >
                <p>
                  Dette er en kort tekst
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`English render 1`] = `
<div>
  <div
    data-testid="factbox"
    style="margin-bottom: 10px;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
    >
      <div
        aria-controls="tmp_en-content"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
        id="tmp_en-header"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          Dette er en tittel
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            color="#033F85"
            fill="currentColor"
            font-size="large"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(3, 63, 133);"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              aria-labelledby="tmp_en-header"
              class="MuiAccordion-region"
              id="tmp_en-content"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
              >
                <p>
                  Dette er en test
                </p>
                

                <h1
                  id="hovedoverskrift"
                >
                  Hovedoverskrift
                </h1>
                

                <p>
                  Litt mer tekst
                </p>
                

                <h2
                  id="underoverskrift"
                >
                  Underoverskrift
                </h2>
                

                <h3
                  id="dette-er-en-overskrift"
                >
                  Dette er en overskrift!
                </h3>
                

                <pre>
                  <code
                    class="language-sas"
                  >
                    data test;
set test2;
var = 0;
run;

                  </code>
                </pre>
                

                <p>
                  Og litt tekst her
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`English render 2`] = `
<div>
  <div
    data-testid="factbox"
    style="margin-bottom: 10px;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
    >
      <div
        aria-controls="tmp_en-content"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
        id="tmp_en-header"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          Dette er en tittel
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            color="#033F85"
            fill="currentColor"
            font-size="large"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(3, 63, 133);"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              aria-labelledby="tmp_en-header"
              class="MuiAccordion-region"
              id="tmp_en-content"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
              >
                <p>
                  Dette er en test
                </p>
                

                <h1
                  id="hovedoverskrift"
                >
                  Hovedoverskrift
                </h1>
                

                <p>
                  Litt mer tekst
                </p>
                

                <h2
                  id="underoverskrift"
                >
                  Underoverskrift
                </h2>
                

                <h3
                  id="dette-er-en-overskrift"
                >
                  Dette er en overskrift!
                </h3>
                

                <pre>
                  <code
                    class="language-sas"
                  >
                    data test;
set test2;
var = 0;
run;

                  </code>
                </pre>
                

                <p>
                  Og litt tekst her
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Nynorsk render 1`] = `
<div>
  <div
    data-testid="factbox"
    style="margin-bottom: 10px;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-5z3g5l-MuiPaper-root-MuiAccordion-root"
    >
      <div
        aria-controls="tmp_nn-content"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-ubsxtp-MuiButtonBase-root-MuiAccordionSummary-root"
        id="tmp_nn-header"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          Dette er ein tittel
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            color="#033F85"
            fill="currentColor"
            font-size="large"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(3, 63, 133);"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              aria-labelledby="tmp_nn-header"
              class="MuiAccordion-region"
              id="tmp_nn-content"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
              >
                <p>
                  Dette er ein kort tekst
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
